# devops

./: .gitignore  README.md
.claude/: CLAUDE.md  session-notes-2026-03-19.md
bootstrap/: argocd-bootstrap-local.yaml  argocd-bootstrap.yaml  get-argocd-password.sh  get-grafana-password.sh  k3d-local.sh  k3s-production.sh  local.sh
cli/: Cargo.toml
cli/src/: cli.rs  commands.rs  crds.rs  lib.rs  main.rs
cli/src/commands/: gen_crds.rs  snapshot.rs
cli/src/crds/: snapshot_set.rs
clusters/local/: appset.yaml  platform.yaml  zcash-testnet-kanister.yaml  zcash-testnet.yaml
clusters/production/: appset.yaml  platform.yaml  zaino.yaml  zebra.yaml
devlog/: 2026-03-14-snapshot-infra-setup.md  2026-03-19-argo-workflows-snapshot.md  2026-03-21-platform-spec-and-cli.md  2026-03-22-ephemeral-deploys.md  2026-03-24-observability-stack.md  2026-03-25-tailscale-funnel-exposure.md  2026-03-26-build-optimization.md  2026-03-30-serve-zaino-and-storage.md  2026-06-09-cluster-audit-and-cleanup.md  2026-06-10-zebra-upgrade-and-migration-bug.md  2026-06-11-sync-speed-bisect.md  2026-06-12-prometheus-metrics-and-workflows.md  2026-06-13-dashboard-and-deploy-fixes.md  2026-06-18-oom-analysis-and-alerting.md  2026-06-19-extraenv-fix-and-pr1263.md  2026-06-20-cluster-access-rbac.md
docs/: snapshot-infrastructure.md
domain/defs/: golden-mainnet.yaml  golden-testnet.yaml  zcash-testnet.yaml
platform/argo-workflows/: kustomization.yaml  values.yaml
platform/cert-manager/: kustomization.yaml  values.yaml
platform/cluster-access/: Chart.yaml  (+1 more)
scripts/: extract-kubeconfig.sh
(+86 files in other folders)
